# timed-automata-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  pipeline.yaml
benches/: reachability_bench.rs
src/: difference_bound_matrix.rs  lib.rs  reachability.rs  symbolic_state.rs  ta.rs  util.rs  validation.rs
src/symbolic_state/: difference_bound_matrix.rs
src/ta/: clock.rs  clock_constraint.rs  location.rs  switch.rs
src/ta/clock_constraint/: clause.rs
wasm_test/: .oxfmtrc.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
wasm_test/test/: wasm.test.ts
