[package]
name = "timed-automata-analyzer"
version = "1.0.7"
authors = ["luth1um"]
description = "An analyzer for Timed Automata written in Rust"
license = "MIT"
repository = "https://github.com/luth1um/timed-automata-analyzer"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
wasm-bindgen = "0.2.104"
